Summary
  Cassandra: extracted async API into separate facade classes
  - Removed inline asyncGet/asyncGett/asyncInsert/asyncList/... methods
from CassandraExecutor/CassandraExecutorBase and v3 CassandraExecutor
(~2,300 lines).
  - Added new AsyncCassandraExecutor/AsyncCassandraExecutorBase (and v3
equivalent), reached via executor.async() — mirrors the existing
DynamoDB/MongoDB pattern.

  MongoDB: API rename for clarity
  - coll() → mongoCollection()
  - collExecutor(...) → collectionExecutor(...)
  - collMapper(...) → collectionMapper(...)
  - Internal field collExecutor → collectionExecutor (sync +
reactivestreams packages).

  DynamoDB
  - attrValueOf(...) → toAttributeValue(...).
  - Cleaned up async Javadoc examples to use ContinuableFuture idioms
(thenRunAsync with (value, ex), .get() for blocking) instead of
CompletableFuture chains.
  - Documented that Mapper.batchGetItem/batchSave do not auto-split past
DynamoDB's 100/25 limits.

  Cassandra CqlBuilder
  - Added onlyIf(...) as the preferred name; kept iF(...) for backward
compat.
  - Removed local QM_CACHE, delegating repeatPlaceholders(...) to
QueryUtil.placeholders(...).

  HBase
  - Removed deprecated AnyOperation.toJSON()/toJSON(int) (replaced by
toJson() variants).
  - AnyScan/HBaseExecutor: Javadoc fixes documenting actual
null-handling (NPE from underlying HBase API, not IAE), partial-result
positional caveats, and unsupported types.

  BigQuery / Misc
  - Javadoc clarifications on null handling and exception types (NPE vs
IAE) across BigQueryExecutor.

  Dependencies (pom.xml)
  - abacus-common 7.7.0 → 7.7.1
  - abacus-query 4.7.0 → 4.7.1
  - Added com.codahale.metrics:metrics-core:3.0.2 (provided).

  Tests + docs: Updated test suites and docs/mongodb-executor.html to
match the renames/refactors.